add func for rest endpoint getPieCoinPrice and refactor for accountService